Fix launch.sh due to Java9 migration and JRE modularization