@@ -111,7 +111,7 @@ while IFS='|' read -ra PROTOS; do
 	    for mapper in "${MAPPERS[@]}"; do
 		for((i=1;i<$nb_thread;i++)); do
 		    echo "Run test suite for ${proto} with $i simultaneous calls"
-		    $java_bin -jar $jar_path $proto $i $compression "${comment}" $mapper
+		    $java_bin --add-modules java.xml.bind,java.xml.ws -jar $jar_path $proto $i $compression "${comment}" $mapper
 		done
 	    done
 	done <<< "$mappers"
